--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Ciera Hernandez | Full-Stack Software Engineer | Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;700&family=Montserrat:wght@300;700&family=Nanum+Pen+Script&display=swap"
-	 rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
 
@@ -25,7 +23,7 @@
         <p>I'm a Full-Stack Software Engineer living in an <b>EXTREMELY</b> small town called Boulevard, CA that's nesteled in sunny San Diego County.</p>
         <p>I love anything to do with computers! Whether it's hardware or software, I want to learn all about it.</p>
         <p>Take a look at my website and if you like what you see <a href="#contact">Contact Me.</a></p>
-      <section>
+      </section>
 
         <!-- My About Me Page -->
       <section>
@@ -53,16 +51,16 @@
             <a href="https://github.com/armelwl1951">GitHub</a>
           </li>
           <li>
-            <a href="mailto:ciera.hernandez@outlook.com? subject=Portfolio%20Contact">Email</a>
+            <a href="mailto:ciera.hernandez@outlook.com?subject=Portfolio%20Contact=Message">Email</a>
           </li>
           <li>
-            <a href="tel:(619) 955-0096">Call Me</a>
+            <a href="tel:(619)955-0096">Call Me</a>
           </li>
         </ol>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6717.684506749936!2d-116.2819165729073!3d32.66364170614879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9a2807659c3a9%3A0x117a77a4b80c6d46!2sBoulevard%2C%20CA%2091905!5e0!3m2!1sen!2sus!4v1594417451659!5m2!1sen!2sus" height="450" allowfullscreen=""></iframe> 
-        </section>
-      </main>
+      </section>
+    </main>
 
       <!-- My Foots Name -->
       <footer>
