--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section>
         <img src="images/logo/ibm_image.jpeg" alt="Portfolio - Logo" class="center">
         <h1>¡Hola! I am Ciera Hernandez</h1>
-        <p>I'm a Full-Stack Software Engineer living in an <b>EXTREMELY</b> small town called Boulevard, CA that's nesteled in sunny San Diego County.</p>
+        <p>I'm a Full-Stack Software Engineer living in an <b>EXTREMELY</b> small town called Boulevard, CA that's nestled in sunny San Diego County.</p>
         <p>I love anything to do with computers! Whether it's hardware or software, I want to learn all about it.</p>
         <p>Take a look at my website and if you like what you see <a href="#contact">Contact Me.</a></p>
       </section>
